--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="functions.js"></script>
 
 </head>
 
 <body>
-     <table border="5" id="Table" class="table table-sm table-dark" style="color: rgb(236, 17, 86);"></table>
+    <br> Student Name: <input id="studentName" placeholder="input student name">
+    <br><button onclick="search_name()">search name</button><br>
+    <br><button onclick="search_post()">search post</button><br>
+    <br><button onclick="search_albums()">search alboum</button><br>
+    <table border="5" id="Table" class="table table-sm table-dark" style="color: rgb(236, 17, 86);"></table>
     <script>
-            axios.get('https://jsonplaceholder.typicode.com/posts')
-                .then(res => {
-                    const resultHTML = res.data.map(book => `<tr><td>${book.userId}</td><td>${book.id}</td><td>${book.title}</td><td>${book.body}</td></tr>`).join('');
-                    Table.innerHTML = "<thead><tr><th>userId</th><th>id</th><th>title</th><th>body</th></tr></thead><tbody>" + resultHTML + "</tbody>";
-                })
-
+        axios.get('https://jsonplaceholder.typicode.com/users')
+            .then(res => {
+                const resultHTML = res.data.map(user => `<tr><td>${user.id}</td><td>${user.name}</td><td>${user.username}</td><td>${user.email}</td></tr>`).join('');
+                Table.innerHTML = "<thead><tr><th>id</th><th>name</th><th>username</th><th>email</th></tr></thead><tbody>" + resultHTML + "</tbody>";
+            })
     </script>
 </body>
 
