--- a/index2.html
+++ b/index2.html
@@ -20,12 +20,12 @@
 
             if (username.length >= 4 && username.length <= 8) {
                 localStorage.setItem('user', username);
+                window.location.href = 'page2.html';
             } else {
                 alert('Username must be between 4 and 8 characters');
             }
         }
-
-
+        
         function saveColor() {
             localStorage.setItem('color', favorite_color.value)
         }
